syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package managers;

option csharp_namespace = "AuthMicroservice.ProtoServices";

// UserGrpcService provides methods for managing users.
service UserGrpcManager {
    rpc GetAll(google.protobuf.Empty) returns (stream UserListDTOProto);
    rpc GetDetail(UserLookup) returns (UserDetailDTOProto);
    rpc Create(UserCreateDTOProto) returns (UserListDTOProto);
    rpc UpdateMe(UserUpdateMeDTOProto) returns (UserListDTOProto);
    rpc Update(UserUpdateDTOProto) returns (UserListDTOProto);
    rpc Delete(UserLookup) returns (google.protobuf.Empty);
}

// UserLookup is used to look up a user by their ID.
message UserLookup {
    string id = 1;
}

// User represents a user in the system.
message UserProto {
    string id = 1;
    string username = 2;
    string password = 3;  // Store hashed password instead of plain text
    google.protobuf.StringValue salt = 4;  // Store salt used to hash the password
    roles_proto role = 5;
    bool isActive = 6;
    google.protobuf.StringValue firstName = 7;
    google.protobuf.StringValue lastName = 8;
    int32 age = 9;
    google.protobuf.StringValue email = 10;
    google.protobuf.StringValue phone = 11;    
    google.protobuf.Timestamp birthday = 12;
    google.protobuf.Timestamp createdAt = 13;
    google.protobuf.Timestamp updatedAt = 14;
}

// UserListDTOProto represents a user in a list of users.
message UserListDTOProto {
    string id = 1;
    google.protobuf.StringValue firstName = 2;
    google.protobuf.StringValue lastName = 3;
    string username = 4;
    google.protobuf.StringValue email = 5;
    google.protobuf.StringValue phone = 6;
    google.protobuf.StringValue salt = 7;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp updatedAt = 9;
}

// UserCreateDTOProto is used to create a new user.
message UserCreateDTOProto {
    string username = 1;
    string password = 2; 
    google.protobuf.StringValue firstName = 3;
    google.protobuf.StringValue lastName = 4;
    int32 age = 5;
    google.protobuf.StringValue email = 6;
    google.protobuf.StringValue phone = 7;
    google.protobuf.Timestamp birthday = 8;
}

// UserUpdateDTOProto is used to update an existing user.
message UserUpdateDTOProto {
    string id = 1;
    string username = 2;
    google.protobuf.StringValue firstName = 3;
    google.protobuf.StringValue lastName = 4;
    int32 age = 5;
    google.protobuf.StringValue email = 6;
    google.protobuf.StringValue phone = 7;
    google.protobuf.Timestamp birthday = 8;
}

message UserUpdateMeDTOProto {
    string username = 1;
    google.protobuf.StringValue firstName = 2;
    google.protobuf.StringValue lastName = 3;
    int32 age = 4;
    google.protobuf.StringValue email = 5;
    google.protobuf.StringValue phone = 6;
    google.protobuf.Timestamp birthday = 7;
}


// UserDetailDTOProto represents detailed information about a user.
message UserDetailDTOProto {
    string id = 1;
    string username = 2;
    roles_proto roles = 3;
    bool isActive = 4;
    google.protobuf.StringValue firstName = 5;
    google.protobuf.StringValue lastName = 6;
    int32 age = 7;
    google.protobuf.StringValue email = 8;
    google.protobuf.StringValue phone = 9;
    google.protobuf.Timestamp birthday = 10;
    google.protobuf.Timestamp createdAt = 11;
    google.protobuf.Timestamp updatedAt = 12;
}

// roles represents the different roles a user can have.
enum roles_proto {
    ADMIN = 0;
    USER = 1;
}

// Error represents an error returned by a service method.
message Error {
    int32 code = 1;
    google.protobuf.StringValue message = 2;
    google.protobuf.StringValue details = 3;
}